[tool.poetry]
name = "gssp-shell"
version = "0.1.0"
description = ""
authors = ["gsspdev <108854023+gsspdev@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
colorama = "^0.4.6"
openai = "^0.27.4"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.1"
python-pptx = "^0.6.21"
wikipedia = "^1.4.0"
wikipedia-sections = "^2.0.0"
PyAutoGUI = "^0.9.53"
opencv-python = "^4.7.0.72"

[tool.poetry.group.dev.dependencies]
numpy = "^1.24.2"
matplotlib = "^3.7.1"
colorama = "^0.4.6"
openai = "^0.27.4"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.1"
python-pptx = "^0.6.21"
wikipedia = "^1.4.0"
wikipedia-sections = "^2.0.0"
PyAutoGUI = "^0.9.53"
opencv-python = "^4.7.0.72"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
